--- a/tiki/css/index.scss
+++ b/tiki/css/index.scss
@@ -465,7 +465,7 @@
             }
 
             .content {
-                width: 920px;
+                width: 100%;
                 padding: 0px 16px 16px;
                 display: inline-block;
                 color: rgb(36, 36, 36);
