--- a/tiki/css/index.css
+++ b/tiki/css/index.css
@@ -1,3 +1,171 @@
+.product_slide {
+  margin-bottom: 16px;
+  border-radius: 4px;
+}
+
+.product_slide .grid {
+  background-color: white;
+}
+
+.product_slide .grid .block_title {
+  color: #333333;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 32px;
+  padding: 8px 16px;
+  text-transform: capitalize;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: 0px;
+}
+
+.product_slide .grid .slider_container {
+  background-color: white;
+  border-radius: 4px;
+  overflow: hidden;
+  min-height: 302px;
+  position: relative;
+  height: 100%;
+  overflow: hidden;
+}
+
+.product_slide .grid .slider_container .slick_list {
+  margin-left: 0px;
+  margin-right: 0px;
+}
+
+.product_slide .grid .slider_container .slick_list .slick_track {
+  width: 7452px;
+  opacity: 1;
+  -webkit-transform: translate3d(0px, 0px, 0px);
+          transform: translate3d(0px, 0px, 0px);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.product_slide .grid .slider_container .slick_list .slick_track .slick_Item {
+  outline: none;
+  width: 205px;
+  padding: 12px;
+}
+
+.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .item_Product_img {
+  position: relative;
+  width: 100%;
+  margin-bottom: 12px;
+}
+
+.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .item_Product_img img {
+  width: 100%;
+  height: 100%;
+}
+
+.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .item_Product_img .img_freeshipp {
+  width: 136px;
+  height: 24px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+}
+
+.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .title {
+  max-height: 40px;
+  height: auto;
+  overflow: hidden;
+  line-height: 19px;
+}
+
+.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .title h3 {
+  margin: 0px;
+  font-weight: 400;
+  display: contents;
+  font-size: 13px;
+}
+
+.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .bottom {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 0%;
+          flex: 1 1 0%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: normal;
+      -ms-flex-pack: normal;
+          justify-content: normal;
+  -ms-flex-item-align: stretch;
+      align-self: stretch;
+}
+
+.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .bottom .stars {
+  color: #fdd836;
+  font-size: 10px;
+}
+
+.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .bottom .stars i {
+  font-size: 10px;
+}
+
+.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .price {
+  text-align: left;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 500;
+  color: #38383d;
+  margin: 2px 0px 0px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  color: #ff424e;
+}
+
+.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .price .percent {
+  padding: 0px 2px;
+  line-height: 14px;
+  font-size: 12px;
+  font-weight: 400;
+  margin-left: 8px;
+  border: 1px solid #ff424e;
+  border-radius: 2px;
+  background-color: #fff0f1;
+  color: #ff424e;
+}
+
+.product_slide .grid .slider_container .slick_arrow {
+  position: absolute;
+  font-size: 17px;
+  color: #333;
+  opacity: 0.3;
+  padding: 3px 8px;
+  background: #eee;
+  border: 1px solid black;
+  border-radius: 50%;
+  top: 50%;
+  z-index: 5;
+}
+
+.product_slide .grid .slider_container .prev {
+  left: 0;
+}
+
+.product_slide .grid .slider_container .next {
+  right: 0;
+}
+
+.product_slide .grid .slider_container .slick_arrow:hover {
+  opacity: 1;
+}
+
 .body_detail_content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -275,7 +443,7 @@
   cursor: pointer;
   width: 30px;
   background-color: white;
-  border: 1px solid #ececec;
+  border: 1px solid white;
 }
 
 .body_detail_content .body_detail_content_left .add_to_cart .group_input button:first-child {
@@ -630,173 +798,5 @@
       -ms-flex: 1 1 0%;
           flex: 1 1 0%;
   border-right: 0px;
-}
-
-.product_slide {
-  margin-bottom: 16px;
-  border-radius: 4px;
-}
-
-.product_slide .grid {
-  background-color: white;
-}
-
-.product_slide .grid .block_title {
-  color: #333333;
-  font-size: 20px;
-  font-weight: 400;
-  line-height: 32px;
-  padding: 8px 16px;
-  text-transform: capitalize;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  margin: 0px;
-}
-
-.product_slide .grid .slider_container {
-  background-color: white;
-  border-radius: 4px;
-  overflow: hidden;
-  min-height: 302px;
-  position: relative;
-  height: 100%;
-  overflow: hidden;
-}
-
-.product_slide .grid .slider_container .slick_list {
-  margin-left: 0px;
-  margin-right: 0px;
-}
-
-.product_slide .grid .slider_container .slick_list .slick_track {
-  width: 7452px;
-  opacity: 1;
-  -webkit-transform: translate3d(0px, 0px, 0px);
-          transform: translate3d(0px, 0px, 0px);
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-}
-
-.product_slide .grid .slider_container .slick_list .slick_track .slick_Item {
-  outline: none;
-  width: 205px;
-  padding: 12px;
-}
-
-.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .item_Product_img {
-  position: relative;
-  width: 100%;
-  margin-bottom: 12px;
-}
-
-.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .item_Product_img img {
-  width: 100%;
-  height: 100%;
-}
-
-.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .item_Product_img .img_freeshipp {
-  width: 136px;
-  height: 24px;
-  position: absolute;
-  left: 0;
-  bottom: 0;
-}
-
-.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .title {
-  max-height: 40px;
-  height: auto;
-  overflow: hidden;
-  line-height: 19px;
-}
-
-.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .title h3 {
-  margin: 0px;
-  font-weight: 400;
-  display: contents;
-  font-size: 13px;
-}
-
-.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .bottom {
-  -webkit-box-flex: 1;
-      -ms-flex: 1 1 0%;
-          flex: 1 1 0%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: normal;
-      -ms-flex-pack: normal;
-          justify-content: normal;
-  -ms-flex-item-align: stretch;
-      align-self: stretch;
-}
-
-.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .bottom .stars {
-  color: #fdd836;
-  font-size: 10px;
-}
-
-.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .bottom .stars i {
-  font-size: 10px;
-}
-
-.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .price {
-  text-align: left;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 500;
-  color: #38383d;
-  margin: 2px 0px 0px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  color: #ff424e;
-}
-
-.product_slide .grid .slider_container .slick_list .slick_track .slick_Item .price .percent {
-  padding: 0px 2px;
-  line-height: 14px;
-  font-size: 12px;
-  font-weight: 400;
-  margin-left: 8px;
-  border: 1px solid #ff424e;
-  border-radius: 2px;
-  background-color: #fff0f1;
-  color: #ff424e;
-}
-
-.product_slide .grid .slider_container .slick_arrow {
-  position: absolute;
-  font-size: 17px;
-  color: #333;
-  opacity: 0.3;
-  padding: 3px 8px;
-  background: #eee;
-  border: 1px solid black;
-  border-radius: 50%;
-  top: 50%;
-  z-index: 5;
-}
-
-.product_slide .grid .slider_container .prev {
-  left: 0;
-}
-
-.product_slide .grid .slider_container .next {
-  right: 0;
-}
-
-.product_slide .grid .slider_container .slick_arrow:hover {
-  opacity: 1;
 }
 /*# sourceMappingURL=index.css.map */
